# ultimate_shop

./: .gitignore  README.md
auth_service/: .example_env  alembic.ini  config.py  exceptions.py  main.py  pyproject.toml  schemas.py
auth_service/alembic/: env.py
auth_service/alembic/versions/: 48ec622dec2c_added_account_table.py  77a28c335b36_added_account_table.py  8e5f9e26d975_added_account_table.py  a76512592bbc_added_users_table.py  c8073704abf7_added_account_table.py  d41de590b732_added_account_table.py  d96d6d8557f5_added_account_table.py  e48d87709401_init_tables.py  e5355ea2fa04_added_account_table.py  e62ede2e981a_added_account_table.py
auth_service/database/: database.py  models.py  utils.py
auth_service/services/: user_service.py
tools/: pyproject.toml
tools/tools/: hash.py
